--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,6 @@
-# version: '2'
-# services:
-#   app:
-#     build: .
-#     image: this_is_a_test
-#     environment:
-#       NODE_ENV: development
-#     tty: true
-#     ports:
-#       - '3000:3000'
-#     depends_on:
-#       - mongodb
-#   mongodb:
-#     image: mongo:3.2.5
+version: '2'
+services:
+    web:
+        build: .
+        ports:
+            - '8080:3000'
